--- a/examples/infinity-calendar.css
+++ b/examples/infinity-calendar.css
@@ -1,6 +1,43 @@
+button, select {
+  border: none;
+  padding: .5em;
+  margin: 2em 1em;
+  background: rgba(240, 240, 240, 0.9);
+  box-shadow: -1px 1px 9px -2px rgba(23,23,23,0.73);
+}
+
+button {
+  cursor: pointer;
+  padding: .8em 3em;
+}
+
+select {
+  width: 20%;
+  border: none;
+  cursor: pointer;
+  border-radius: .6em;
+  background-image: url(http://www.devpunks.com/down-arrow.svg);
+  background-size: 8%;
+  background-repeat: no-repeat;
+  background-position: 90% 0.50em;
+
+  /* to remove arrows */
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
+select::-ms-expand
+  { display: none // IE }
+
+
+
+
 infinity-calendar {
   height: 100vh;
   text-align: center;
+  text-align-last: center;
+
   display: flex;
   flex-flow: row wrap;
   align-content: flex-start;
@@ -8,24 +45,34 @@ infinity-calendar {
 
 infinity-calendar header {
   flex-basis: 100%;
-  height: 10vh;
   text-align: center;
   background: var(--darkest-color);
 }
+
 infinity-calendar menu {
+  display: flex;
   flex-basis: 100%;
+  justify-content: space-between;
   background: var(--lightest-color);
 }
 
-infinity-calendar a {
-  flex-basis: 4rem;
-  height: 4rem;
-  margin: .5em;
-  border-radius: 4rem;
+infinity-calendar template[name=days] ~ a {
   display: flex;
+  flex-basis: 3rem;
+  justify-content: center;
+
+
+  border: none;
+  margin: .5em;
+  height: 3rem;
+  padding: .5em;
+  line-height: 3rem;
   text-align: center;
-  /* line-height: 4rem; */
+  border-radius: 3rem;
+  background: rgba(240, 240, 240, 0.9);
+  box-shadow: -1px 1px 9px -2px rgba(23,23,23,0.73);
 }
+
 
 infinity-calendar {
 /*
@@ -33,7 +80,6 @@ infinity-calendar {
   height: 1em;
 */
   width: auto;
-  cursor: pointer;
   margin-top: 0.3em;
   background: var(--lighter-color);
 /*
