--- a/examples/infinity-calendar.css
+++ b/examples/infinity-calendar.css
@@ -1,25 +1,25 @@
 button, select {
   border: none;
-  padding: .5em;
-  margin: 2em 1em;
+  margin: 1.612em 1em 1em;
+  font-size: 1.0em;
   background: rgba(240, 240, 240, 0.9);
   box-shadow: -1px 1px 9px -2px rgba(23,23,23,0.73);
+  padding: .6em 3em;
 }
 
 button {
   cursor: pointer;
-  padding: .8em 3em;
 }
 
 select {
-  width: 20%;
+  width: auto;
   border: none;
   cursor: pointer;
   border-radius: .6em;
   background-image: url(http://www.devpunks.com/down-arrow.svg);
   background-size: 8%;
   background-repeat: no-repeat;
-  background-position: 90% 0.50em;
+  background-position: 90% 50%;
 
   /* to remove arrows */
   appearance: none;
