--- a/examples/infinity-calendar.css
+++ b/examples/infinity-calendar.css
@@ -1,10 +1,14 @@
 button, select {
   border: none;
-  margin: 1.612em 1em 1em;
+  opacity: 0.7;
   font-size: 1.0em;
-  background: rgba(240, 240, 240, 0.9);
-  box-shadow: -1px 1px 9px -2px rgba(23,23,23,0.73);
   padding: .6em 3em;
+  margin: 1.612em 1em 1em;
+  background-color: rgba(250, 250, 250, 0.9);
+  box-shadow: 0px 1px 11px -3px rgba(23,23,23,0.73);
+}
+button:hover, select:hover {
+  opacity: 1.0
 }
 
 button {
@@ -18,6 +22,7 @@ select {
   border-radius: .6em;
   background-image: url(http://www.devpunks.com/down-arrow.svg);
   background-size: 8%;
+  text-align-last: center;
   background-repeat: no-repeat;
   background-position: 90% 50%;
 
@@ -33,14 +38,19 @@ select::-ms-expand
 
 
 
+
+infinity-calendar {
+  width: auto;
+}
 infinity-calendar {
   height: 100vh;
+  margin-top: 0.3em;
   text-align: center;
-  text-align-last: center;
 
   display: flex;
   flex-flow: row wrap;
   align-content: flex-start;
+  background-color: var(--lightest-color);
 }
 
 infinity-calendar header {
@@ -56,6 +66,10 @@ infinity-calendar menu {
   background: var(--lightest-color);
 }
 
+infinity-calendar menu button {
+  width: 30%
+}
+
 infinity-calendar template[name=days] ~ a {
   display: flex;
   flex-basis: 3rem;
@@ -69,17 +83,16 @@ infinity-calendar template[name=days] ~ a {
   line-height: 3rem;
   text-align: center;
   border-radius: 3rem;
-  background: rgba(240, 240, 240, 0.9);
-  box-shadow: -1px 1px 9px -2px rgba(23,23,23,0.73);
+  background-color: rgba(240, 240, 240, 0.9);
+  box-shadow: 0px 1px 11px -3px rgba(23,23,23,0.73);
 }
+
+infinity-calendar
+  template[name=days]~ a:hover {
+    background-color: rgba(250, 250, 250, 0.9);
+  }
 
 infinity-calendar select {
   width: 36%;
-}
-
-infinity-calendar {
-  width: auto;
-  margin-top: 0.3em;
-  background: var(--lightest-color);
 }
 
