--- a/index.css
+++ b/index.css
@@ -2,25 +2,26 @@
   --margin: 0 0;
 }
 body {
-  padding: 0;
+  padding: 1em 0 0;
 }
 
 #badges {
   padding: 0;
+  line-height: 2em !important;
   text-align: center
 }
 
 #badges img {
   width: auto;
   height: 0.9rem;
-  margin: 0.6em 0.4em 0
+  margin: 0.6em 0.2em 0
 }
 
 #badges a:link {
   margin: 0;
   height: 1rem;
-  text-decoration: none;
-  border-bottom: none
+  border-bottom: none;
+  text-decoration: none
 }
 
 body > nav a:link {
