--- a/index.css
+++ b/index.css
@@ -95,10 +95,13 @@ body > aside {
 }
 
 body > footer {
+  left: 0;
+  bottom: 0;
   margin: 0;
   width: 100vw;
   height: 10em;
   display: flex;
+  position: fixed;
   justify-content: space-around;
   background: rgba(0,0,0,0.6);
 }
