--- a/index.css
+++ b/index.css
@@ -71,14 +71,8 @@ body > nav summary a { margin-left: 0em }
 body > main h1 { text-align: center }
 
 body > aside {
-  right: 0;
-  margin: 0;
-  height: auto;
   text-align: left;
-  min-width: 10rem;
-  min-height: 82vh;
-  background: black;
-  position: absolute;
+  background: black
 }
 
 body > footer {
