--- a/index.css
+++ b/index.css
@@ -24,14 +24,17 @@ body {
   text-decoration: none
 }
 
-body > nav a:link {
-  border-bottom: none;
-  font-size: 85%;
-}
+body > nav a:link
+  { border-bottom: none }
 
 body > aside header,
 body > nav header {
   text-align: center;
+}
+
+body > nav a:link,
+body > aside a:link {
+  font-size: 85%;
 }
 
 body > nav {
