--- a/index.css
+++ b/index.css
@@ -33,9 +33,8 @@ body > nav header {
 }
 
 body > nav a:link,
-body > aside a:link {
-  font-size: 85%;
-}
+body > aside a:link
+  { font-size: 85% }
 
 body > nav {
   text-align: left;
