--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ body > main h1 { text-align: center }
 
 body > aside {
   text-align: left;
-  background: black
+  background: rgba(20,20,20,0.8)
 }
 
 body > footer {
