--- a/index.css
+++ b/index.css
@@ -29,9 +29,8 @@ body > aside a:link
   { border-bottom: none }
 
 body > aside header,
-body > nav header {
-  text-align: center;
-}
+body > nav header
+  { text-align: center }
 
 body > nav a:link,
 body > aside a:link
