--- a/index.css
+++ b/index.css
@@ -195,19 +195,23 @@ body { display: flex; flex-flow: column }
 body > main, body > aside { flex: 1 }
 
 @media (orientation: landscape) {
-  body           { flex-flow: row wrap }
-  body > main    { flex-basis: 55vw }
-  body > aside   { flex-basis: 25vw }
-  body > nav     { flex-basis: 20vw }
+  body         { flex-flow: row wrap }
+  body > main  { flex-basis: 55vw }
+  body > aside { flex-basis: 25vw }
+  body > nav   { flex-basis: 20vw }
   body > main,
-  body > aside,
-  body > nav     { min-height: 80vh }
+  body > nav,
+  body > aside { min-height: 80vh }
+
   body > header-group
     { margin-bottom: 0; height: 18vh }
+
   body > header-group, body > footer
     { flex-basis: 100vw }
-  body > footer
-    { height: 10vh }
+
+  body > footer {
+    height: 10vh
+  }
 }
 
 @media (min-width:786px) { }
