--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+/*
 body > a#github {
   width: 6vw;
   height: 6vw;
@@ -5,32 +6,54 @@ body > a#github {
   border-radius: 100px;
   transform: rotate(38deg);
   background: var(--darkest-color);
+  background: red;
   box-shadow: 0px 0px 0.8em 0.2em rgba(20,20,20,.6);
 
-  right:1vh;
-  top: 1vh;
-  position: fixed;
-  z-index: 1;
+  position: relative;
 }
-body > a#github:after {
-  top: 1vh;
-  left: -20vw;
-  z-index: -1;
-  position: fixed;
-
-  width: 40vw;
-  height: 10vh;
-  display: block;
-  content: '.';
+body > a#github::after {
   background: var(--darkest-color);
+  background: yellow;
   box-shadow: 0px 0px 0.8em 0.2em rgba(20,20,20,.6);
+
+  content: '';
+  width: 38vw;
+  height: 10vh;
+
+  position: absolute;
+  z-index: -1;
+
 }
 
 body > a#github:hover
   { background: var(--darker-color) }
 
-body > svg {
+body #github svg {
+  top: 20px;
+  margin: 0.3em 0;
+  left:auto;
+  width: 6vw;
+  height: 6vw;
+  position: absolute;
   pointer-events: all;
+}
+*/
+#github { 
+    position: relative;  /* optional */
+    width: 100px;
+    height: 100px;
+    background-color: blue;
+}
+
+#github::after {
+    content: "";
+    width: 150px;
+    height: 150px;
+    background-color: red;
+
+    /* create a new stacking context */
+    position: absolute;
+    z-index: -1;  /* to be below the parent element */
 }
 
 :root {
