--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@ body > a#github {
   height: 6vw;
   padding: 0.3em;
   border-radius: 100px;
-  transform: rotate(38deg);
   background: var(--darkest-color);
   background: red;
   box-shadow: 0px 0px 0.8em 0.2em rgba(20,20,20,.6);
@@ -28,38 +27,45 @@ body > a#github::after {
 body > a#github:hover
   { background: var(--darker-color) }
 
+*/
 body #github svg {
-  top: 20px;
-  margin: 0.3em 0;
-  left:auto;
-  width: 6vw;
-  height: 6vw;
-  position: absolute;
   pointer-events: all;
 }
-*/
 #github {
   margin:0;
-  top: 0;
-  right: 10vw;
-  position: absolute;
+  padding: 0.3em;
+  z-index: 3;
+  top: 1.1em;
+  right: -10vw;
+  width: 30vw;
+  height: 8vh;
   display: block;
-  width: 6vw;
-  height: 6vw;
-  background-color: blue;
+  position: fixed;
+
+  border: none;
+  transform-style: flat;
+  transform: rotate(38deg);
+  background: var(--darker-color);
+  box-shadow: 0px 0px 0.8em 0.2em rgba(20,20,20,.6);
+  background: rgba(200,200,200,0.9);
 }
 
-#github::after {
-  top: 0;
-  right: -20vw;
-  width: 40vw;
-  height: 10vh;
-  display: block;
+#github::before {
+  top: -0.3em; /* padding */
+  width: 8vh;
+  height: 8vh;
   content: "";
-  background-color: red;
+  padding: 0.3em;
+  display: block;
+  margin-left: 11vw;
+  border-radius: 10vh;
+  border:0.5em solid var(--darkest-color);
+  background: var(--darkest-color);
+
+  background: #898989 url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0,0,16,16'><path fill-rule='evenodd' fill='#eee' d='M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z'></path></svg>") no-repeat;
 
   /* create a new stacking context */
-  position: absolute;
+  position: fixed;
   z-index: -1;  /* to be below the parent element */
 }
 
