--- a/index.css
+++ b/index.css
@@ -250,7 +250,7 @@ body { display: flex; flex-flow: column }
 body > main, body > aside { flex: 1 }
 
 @media (orientation: landscape) {
-  body         { flex-flow: row wrap }
+  body         { padding: 0; flex-flow: row wrap }
   body > main  { flex-basis: 55vw }
   body > aside { flex-basis: 25vw }
   body > nav   { flex-basis: 20vw }
@@ -268,6 +268,12 @@ body > main, body > aside { flex: 1 }
   body > nav,
   body > main
   { padding-bottom: 20vh }
+
+  body > nav {
+    margin: 0;
+    position: fixed;
+    top: 18vh; /* height of header */
+  }
 
   body > aside, body > nav
     { z-index: 2 }
