--- a/index.css
+++ b/index.css
@@ -1,48 +1,8 @@
-/*
-body > a#github {
-  width: 6vw;
-  height: 6vw;
-  padding: 0.3em;
-  border-radius: 100px;
-  background: var(--darkest-color);
-  background: red;
-  box-shadow: 0px 0px 0.8em 0.2em rgba(20,20,20,.6);
-
-  position: relative;
-}
-body > a#github::after {
-  background: var(--darkest-color);
-  background: yellow;
-  box-shadow: 0px 0px 0.8em 0.2em rgba(20,20,20,.6);
-
-  content: '';
-  width: 38vw;
-  height: 10vh;
-
-  position: absolute;
-  z-index: -1;
-
-}
-
-body > a#github:hover
-  { background: var(--darker-color) }
-
-*/
-
-
-
-
-
-
-
-
-
-
 :root {
   --margin: 0 0;
 }
 body {
-  padding: 1em 0 0;
+  padding: 0;
 }
 
 #badges {
@@ -250,7 +210,7 @@ body { display: flex; flex-flow: column }
 body > main, body > aside { flex: 1 }
 
 @media (orientation: landscape) {
-  body         { padding: 0; flex-flow: row wrap }
+  body         { flex-flow: row wrap }
   body > main  { flex-basis: 55vw }
   body > aside { flex-basis: 25vw }
   body > nav   { flex-basis: 20vw }
