change background styling to be a ittle softer

--- a/examples/to-do/styles.css
+++ b/examples/to-do/styles.css
@@ -3,7 +3,7 @@
   to-do form > fieldset {
     padding: 0;
     border: none;
-    background: #eee;
+    background: rgba(230,230,230,.5);
     line-height: 2em;
   }
 
