Decrease font size down to legible format

--- a/examples/to-do/styles.css
+++ b/examples/to-do/styles.css
@@ -38,3 +38,11 @@
   to-do input#completed:checked
     ~ footer > label[for=completed]
       { background: #ddd }
+
+
+
+
+
+to-do button {
+  font-size: 70%;
+}
