🐛 🐛 🐛 🐛  HUGE BUG in platform with fieldset & flexbox   This kept me up all night. Le' Sigh. Amazingly   Although I believe [Webkit was able to patch   this](https://bugs.webkit.org/attachment.cgi?id=303518&action=review)   there is still the situation in 2017.
  - Example: https://codepen.io/stardotbmp/pen/ofzhr
  - S.O. https://stackoverflow.com/questions/28078681/why-cant-fieldset-be-flex-containers
  - Chromium Bug tracker:
    https://bugs.chromium.org/p/chromium/issues/detail?id=375693
  - Flexbugs: https://github.com/philipwalton/flexbugs

--- a/examples/to-do/index.css
+++ b/examples/to-do/index.css
@@ -4,23 +4,22 @@
 to-do form /* no tasks */
   > footer { display: none }
 
-to-do form > fieldset
+to-do form > article
   ~ footer { display: flex }
 
-to-do form
-  /* state machine */
+to-do form /* state machine */
   > input[type=radio] { display: none }
 
 to-do form input#active:checked
-  ~ fieldset input:checked
-,
+  ~ article input:checked,
+
 to-do form input#active:checked
-  ~ fieldset input:checked
+  ~ article input:checked
     ~ * { display:none }
 
 to-do form input#completed:checked
-  ~ fieldset input:not(:checked),
+  ~ article input:not(:checked),
 
 to-do form input#completed:checked
-  ~ fieldset input:not(:checked)
+  ~ article input:not(:checked)
     ~ * { display:none }
