--- a/examples/to-do/index.css
+++ b/examples/to-do/index.css
@@ -1,4 +1,4 @@
-/* @import '/examples/to-do/styles.css'; */
+@import '/examples/to-do/styles.css';
 
 /* CSS logic ------------------------------------- */
 to-do form /* no tasks */
