Add button margin for add button

--- a/examples/to-do/styles.css
+++ b/examples/to-do/styles.css
@@ -39,8 +39,8 @@ to-do form
   }
 
 to-do form
-  > header button[type=submit] {
-  }
+  > header button[type=submit]
+      { margin-left: 2vw }
 
 to-do form > article {
   padding: 0;
