--- a/examples/to-do/style.css
+++ b/examples/to-do/style.css
@@ -31,10 +31,10 @@ to-do form
 
 to-do form
   > header input[required] {
-    margin: 0;
     height: 10vw;
     font-size: 320%;
     flex-basis: 80vw;
+    margin: 0 2vw 0 0;
   }
 
 to-do form
@@ -48,7 +48,7 @@ to-do form > article {
   flex-direction: row;
 
   line-height: 2em;
-  background: rgba(230,230,230,.5);
+  background: rgba(230,230,230,.5)
 // Flexbox bug for fieldset - https://stackoverflow.com/questions/28078681/why-cant-fieldset-be-flex-containers
 }
 
