--- a/examples/email-recipients/style.css
+++ b/examples/email-recipients/style.css
@@ -65,7 +65,6 @@ email-recipients input[name=address] {
   flex: 0;
   border: none;
   outline: none;
-  background; yellow;
   line-height: 1em;
-  align-items: flex-start;
+  margin-left: 0.7em;
 }
