Change aside flexbox

--- a/index.css
+++ b/index.css
@@ -211,13 +211,12 @@ section#installation pre em.comment
 /* HOLY GRAIL */
 
 body { display: flex; flex-flow: column }
-body > main, body > aside { flex: 1 }
 
 @media (orientation: landscape) {
 
   body         { flex-flow: row wrap }
   body > main  { margin-left: 20vw; flex-basis: 55vw; max-width: 55vw; }
-  body > aside { flex-basis: 25vw }
+  body > aside { flex-basis: 24vw } /* This should be 25 WTF? */
   body > nav   {
     top: 0;
     left: 0;
