--- a/examples/infinity-calendar/infinity-calendar.css
+++ b/examples/infinity-calendar/infinity-calendar.css
@@ -70,7 +70,7 @@ infinity-calendar menu button {
   width: 30%
 }
 
-infinity-calendar template[name=days] ~ a {
+infinity-calendar a[onclick] {
   display: flex;
   flex-basis: 3rem;
   justify-content: center;
